--- a/src/pages/SurveyPage.css
+++ b/src/pages/SurveyPage.css
@@ -13,11 +13,13 @@ h1 {
   margin-bottom: 20px;
   padding: 10px;
   border-bottom: 1px solid #ccc;
+  font-weight: normal;
 }
 
 .question p {
   font-size: 1.1rem;
   margin-bottom: 10px;
+  font-weight: normal;
 }
 
 .options {
@@ -84,6 +86,7 @@ button {
 
   .question p {
     font-size: 1rem;
+    font-weight: normal;
   }
 
   .option-label {
